# Python-Discord-Bot

./: .breakpoints  .gitignore  README.md  main.py  pyproject.toml
.cache/replit/: __replit_disk_meta.json
cogs/: BotTalks.py  Genshin.py  Genshin_stats.py  Giveaway tester.py  Help.py  Love_meter.py  Morse Code Decode.py  Morse Code.py  PPmachine.py  TalkingBot Beta.py  UrbanDictionary.py  anime.py  buttons.py  cal.py  economy.py  genshin_reminder.py  image_store.py  img.py  leveling.py  memes.py  music.py  mute.py  new_leveling.py  probe.py  reminder.py  voice.py
cogs/Data/: economy.json  prefixes.json  text.txt  users.json  wpm.json
cogs/GenshinDATA/: genshinimpact.txt
