[tool.poetry]
name = "repl_python3_Speak-Beach"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
youtube_dl = "^2021.12.17"
Flask = "^2.0.2"
disrank = "^0.0.2"
PyNaCl = "^1.4.0"
animec = "^0.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
