[tool.poetry]
name = "repl_python3_Speak-Beach"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
youtube_dl = "^2021.12.17"
Flask = "^2.0.2"
disrank = "^0.0.2"
animec = "^0.3.5"
pymongo = "^4.1.1"
TagScriptEngine = "^2.3.0"
"discord.py" = "^1.7.3"
discord-ui = "^5.1.6"
ramael = "^0.0.1"
discord2 = "2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
